<!--**************************************************************************************
** ParkingHelpmate- An open source android project that helps to track parking meter time 
** and to navigate to the vehicle location from current location
** Application uses Google Maps Android API v2
**
** Copyright(C) 2013 Renu Biradar and Ashwini Guttal
**
** This program is free software: you can redistribute it and/or modify it under 
** the terms of the GNU General Public License as published by the Free Software Foundation, 
** either version 3 of the License, or (at your option) any later version.
**
** This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
** without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
** See the GNU General Public License for more details.
**
** You should have received a copy of the GNU General Public License along with this program. 
** If not, see http://www.gnu.org/licenses/.
** Please see the file "License" in this distribution for license terms. 
** Below is the link to the file License.
** https://github.com/RenuAshwini/ParkingHelpmate/License.txt
**
** Following is the link for the repository- https://github.com/RenuAshwini/ParkingHelpmate
**
** Authors - Renu Biradar and Ashwini Guttal
** email  - renu.biradar@gmail.com and aguttal@gmail.com
**
** References - 
******************************************************************************************-->
<resources>

    <string name="app_name">ParkingHelpmate</string>
    <string name="action_settings">Settings</string>
    <string name="hint_message">HH:MM</string>
    <string name="message1">HH</string>
    <string name="colon">:</string>
    <string name="message2">MM</string>        
    <string name="default_message">enter time</string>
    <string name="hintmessage">TAP TO CHANGE TIME </string>
    <string name="reminder_message">You will be reminded</string>   
    <string name="notes_message">Enter the parking notes:</string> 
    <string name="alert_message">Your parking time expired</string>
    <string name="confirm_message">Your location has been tagged</string>    
    <string name="alert_title">Alert</string>    
    <string name="start_button">START</string>
    <string name="button1">Tag</string>
    <string name="button2">Notes</string>
    <string name="button3">Locate</string>
    <string name="button4">Settings</string>
    <string name="settings_text1">Reminder</string>
    <string name="settings_text3">minutes before</string> 
    <string name="settings_text2">15</string>  
    <string name="settings_text4">Alert Sound Settings</string>     
    <string name="title_activity_AlertSettings">Settings</string>  
    <string name="btn1">5 min</string>  
    <string name="btn2">10 min</string>  
    <string name="btn3">15 min</string>  
    <string name="btn4">Other</string>
    <string name="alertbtn1">Sound1</string>  
    <string name="alertbtn2">Sound2</string>  
    <string name="alertbtn3">Sound3</string>  
    <string name="alertbtn4">Sound4</string>  
    <string name="alertbtn5">Sound5</string>        
    <string name="alertbtn6">Sound6</string>   
    <string name="notes_hint">Notes</string>  
    <string name="dialog_button1">Save</string>   
    <string name="dialog_button2">Cancel</string>   
    <string name="ok_button">OK</string>      
    <string name="home_button">Done</string>
    <string name="gpsalert_message">GPS is disabled. Would you like to enable it?</string> 
    <string name="gpsenable_button">Go to Settings</string>   
    <string name="gpscancel_button">Cancel</string>   
    
</resources>
