<!--**************************************************************************************
** ParkingHelpmate- An open source android project that helps to track parking meter time 
** and to navigate to the vehicle location from current location
** Application uses Google Maps Android API v2
**
** Copyright(C) 2013 Renu Biradar and Ashwini Guttal
**
** This program is free software: you can redistribute it and/or modify it under 
** the terms of the GNU General Public License as published by the Free Software Foundation, 
** either version 3 of the License, or (at your option) any later version.
**
** This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
** without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
** See the GNU General Public License for more details.
**
** You should have received a copy of the GNU General Public License along with this program. 
** If not, see http://www.gnu.org/licenses/.
** Please see the file "License" in this distribution for license terms. 
** Below is the link to the file License.
** https://github.com/RenuAshwini/ParkingHelpmate/License.txt
**
** Following is the link for the repository- https://github.com/RenuAshwini/ParkingHelpmate
**
** Authors - Renu Biradar and Ashwini Guttal
** email  - renu.biradar@gmail.com and aguttal@gmail.com
**
** References - http://developer.android.com/design/building-blocks/
**            - http://android-holo-colors.com/
******************************************************************************************-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/blue_background1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/gold_frame"
        android:orientation="horizontal"
        android:paddingLeft="14dp" >

        <TextView
            android:id="@+id/settings_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:paddingLeft="15dp"
            android:text="@string/settings_text1"
            android:textColor="#FFD700"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/settings_edit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:paddingLeft="5dp"
            android:text="@string/settings_text2"
            android:textColor="#FFD700"
            android:textSize="18sp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/settings_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings_text3"
            android:textColor="#FFD700"
            android:textSize="18sp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/mts_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/fivemts_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onmtsButtonClicked"
            android:text="@string/btn1"
            android:textColor="#FFD700"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/tenmts_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onmtsButtonClicked"
            android:text="@string/btn2"
            android:textColor="#FFD700"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/fifteenmts_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onmtsButtonClicked"
            android:text="@string/btn3"
            android:textColor="#FFD700"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/other_button"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:onClick="onmtsButtonClicked"
            android:text="@string/btn4"
            android:textColor="#FFD700"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/settings_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="15dp"
        android:text="@string/settings_text4"
        android:textColor="#FFD700"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/mts_radiogroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/alertSound1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="onSoundButtonClicked"
            android:text="@string/alertbtn1"
            android:textColor="#FFD700"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/alertSound2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="onSoundButtonClicked"
            android:text="@string/alertbtn2"
            android:textColor="#FFD700"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/alertSound3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:checked="true"
            android:onClick="onSoundButtonClicked"
            android:text="@string/alertbtn3"
            android:textColor="#FFD700"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/alertSound4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="onSoundButtonClicked"
            android:text="@string/alertbtn4"
            android:textColor="#FFD700"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/alertSound5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="onSoundButtonClicked"
            android:text="@string/alertbtn5"
            android:textColor="#FFD700"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/alertSound6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="onSoundButtonClicked"
            android:text="@string/alertbtn6"
            android:textColor="#FFD700"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/home_button"
        android:layout_width="86dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/fall_but_5"
        android:onClick="onClick_Home"
        android:text="@string/home_button"
        android:textColor="#172751"
        android:textSize="18sp" />

</LinearLayout>