<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/rounded_bluecolor">
    
    <TextView
		android:id="@+id/textmessage"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="18sp"      
		android:layout_marginTop="15dp"  
		android:text="@string/notes_message"/>
			    
    <EditText android:id="@+id/edit_message2"
		android:layout_width="match_parent"            
		android:layout_height="wrap_content"
		android:inputType="textCapCharacters"
		android:textSize="18sp"
		android:textColorHint="#000000" 
		android:hint="@string/notes_hint"
		android:focusable="true"
		android:background="@drawable/rounded_nocolor"
		android:focusableInTouchMode="true"
		android:singleLine="true"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_marginTop="15dp"
		android:orientation="horizontal" 
		android:layout_gravity="center">

		<Button
			android:id="@+id/save_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/rounded_button"
			android:text="@string/dialog_button1"
			android:layout_weight="1"
			android:textColor="#FFFFFF" />

		<Button
			android:id="@+id/cancel_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="20dp"
			android:background="@drawable/rounded_button"
			android:text="@string/dialog_button2"
			android:textColor="#FFFFFF" />
	</LinearLayout>
    
</LinearLayout>        
	      
