<!--**************************************************************************************
** ParkingHelpmate- An open source android project to keep track of parking meter time
** Application written in Java
** Application uses Google Maps Android API v2

** Copyright (C) 2013 Renu Biradar and Ashwini Guttal
**
** This program is free software: you can redistribute it and/or modify it under 
** the terms of the GNU General Public License as published by the Free Software Foundation, 
** either version 3 of the License, or (at your option) any later version.
**
** This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
** without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
** See the GNU General Public License for more details.
**
** You should have received a copy of the GNU General Public License along with this program. 
** If not, see http://www.gnu.org/licenses/.
** Below is the link to the file License.
** https://github.com/RenuAshwini/ParkingHelpmate/License
**
** Following is the link for the repository- https://github.com/RenuAshwini/ParkingHelpmate
**
**
** Author - Renu Biradar and Ashwini Guttal
** email: renu@pdx.edu and aguttal@pdx.edu
**
** References - 
** License - 
******************************************************************************************-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/brown022"
    android:layout_gravity="center">
    
    <LinearLayout 
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:orientation="vertical"
	      android:background="@drawable/editshape"
	      android:layout_marginLeft="64dp">  
	      <LinearLayout 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:paddingLeft="14dp" >     
    			<EditText 
    			    android:id="@+id/edit_message1"
				    android:layout_width="wrap_content"            
				    android:layout_height="wrap_content"
				    android:inputType="number"
				    android:textSize="35sp"
				    android:hint="@string/message1" 
				    android:textColorHint="#000000"
				    android:focusable="true"
				    android:focusableInTouchMode="true"
				    android:maxLength="2">       
				    <requestFocus />
     			</EditText>
			    <TextView
			        android:id="@+id/textmessage"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="35sp"        
			        android:text="@string/colon"/>
			    <EditText android:id="@+id/edit_message2"
			        android:layout_width="wrap_content"            
			        android:layout_height="wrap_content"
			        android:inputType="number"
			        android:textSize="35sp"
			        android:hint="@string/message2" 
			        android:textColorHint="#000000"        
			        android:focusable="true"
			        android:focusableInTouchMode="true"
			        android:maxLength="2"/>
	</LinearLayout>        
                                     
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:textColor="#000000"
        android:text="@string/hintmessage" />        
 </LinearLayout>    
   
     <LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingLeft="44dp" >     
        <TextView
	        android:id="@+id/reminder_text1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	     	android:textColor="#FFFFFF"
	     	android:text="@string/reminder_message" />
        <TextView 
	        android:id="@+id/reminder_text2"
	        android:layout_width="wrap_content"            
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dp"
	        android:paddingRight="5dp"
	        android:text="@string/settings_text2"
	        android:textColor="#ffffff"/>
        <TextView
	        android:id="@+id/reminder_text3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#ffffff"  
	        android:text="@string/settings_text3"/>
     </LinearLayout>    
	    
    <Button 
	    android:id="@+id/start_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="14dp"        
	    android:layout_marginLeft="94dp"
	    android:paddingLeft="44dp"
	    android:paddingRight="44dp" 
	    android:background="@drawable/rounded_button"
	    android:textColor="#FFFFFF"
	    android:text="@string/start_button" />

    <TableLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	    <TableRow
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content" 
		   android:layout_marginLeft="34dp"
		   android:layout_marginTop="24dp">

           <LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_column="1">
		        <Button 
		           android:id="@+id/tag_button"		           
		           android:layout_width="60dp"
		           android:layout_height="45dp"
		           android:onClick="onClick_tag"			           
		           android:background="@drawable/map"/>
	               <TextView
			           android:layout_width="wrap_content"
			           android:layout_height="wrap_content"
			           android:textColor="#FFFFFF"
			           android:text="@string/button1" />	        
	       </LinearLayout>                      
           <LinearLayout 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:layout_column="2"
			    android:layout_marginLeft="24dp">    
                <Button 
                	android:id="@+id/notes_button"		           
                   	android:layout_width="60dp"
	                android:layout_height="45dp"
	                android:onClick="startNotesActivity"
	                android:background="@drawable/notes"/>	              	               
			  	<TextView
			 		android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textColor="#FFFFFF"			        
					android:text="@string/button2" />			        
           </LinearLayout>                                
      </TableRow>                
      <TableRow
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content" 
	       android:layout_marginLeft="34dp">                    
      	   <LinearLayout 
		    	 android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:orientation="horizontal"
		         android:layout_column="1">
		         <Button 
		            android:id="@+id/findcar_button"	             
		         	android:layout_width="60dp"
		         	android:layout_height="45dp"
		         	android:layout_marginTop="10dp"
		         	android:onClick="onClick_locate"		         	
		            android:background="@drawable/map2"/>		         
        		 <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="#FFFFFF"
			        android:text="@string/button3"/>        
    	  </LinearLayout>
          <LinearLayout 
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal"
		        android:layout_column="2"
		        android:layout_marginLeft="24dp">   
        	    <Button 		           
        	        android:id="@+id/settings_button"	        	        
		         	android:layout_width="60dp"
		         	android:layout_height="45dp"
		        	android:layout_marginTop="10dp" 
		         	android:onClick="startSettingsActivity"
		         	android:background="@drawable/settings"/>
        	    <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textColor="#FFFFFF"
			        android:text="@string/button4" />
	     </LinearLayout>                  
     </TableRow>                
  </TableLayout>    
</LinearLayout>
    
        
    