<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_alert"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textmessage1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="15dp"
        android:text="@string/alert_title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/rounded_nocolor"        
        android:text="@string/alert_message"
        android:textSize="18sp" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="95dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_button"
        android:text="@string/ok_button"
        android:textColor="#FFFFFF"/>       
</LinearLayout>